# NeuroshimaCardManagerQt6

./: CMakeLists.txt  README.md  main.cpp
core/: CMakeLists.txt
core/Creation/: CMakeLists.txt  CardCreation.cpp  CardCreation.h
core/Creation/Common/: Types.h
core/Creation/Statistics/: AttributeCreation.cpp  AttributeCreation.h  OtherSkillCreation.cpp  OtherSkillCreation.h  SkillCreation.cpp  SkillCreation.h  SkillCreationList.cpp  SkillCreationList.h  SkillCreationSingle.cpp  SkillCreationSingle.h  SkillpackCreation.cpp  SkillpackCreation.h  SkillpackCreationChoosable.cpp  SkillpackCreationChoosable.h  SkillpackCreationGeneral.cpp  SkillpackCreationGeneral.h  SkillpointsCreationManager.cpp  SkillpointsCreationManager.h  StatisticsCreation.cpp  StatisticsCreation.h
core/Data/: CMakeLists.txt  CardData.h
core/Data/Common/: EnumConverter.cpp  EnumConverter.h  Types.h
core/Data/Pages/: StatisticsData.h
core/Data/Statistics/: AttributeData.h  DiseaseData.h  ExperienceData.h  FeatureData.h  (+12 more)
core/Managers/: CMakeLists.txt  CardManager.cpp  CardManager.h  MainManager.cpp  MainManager.h
core/Source/: CMakeLists.txt  SourceConverter.cpp  SourceConverter.h  SourceDocument.cpp  SourceDocument.h  SourceLoader.cpp  SourceLoader.h
core/Source/Common/: ModifierSource.cpp  ModifierSource.h  RequirementSource.cpp  RequirementSource.h
core/Source/Model/: AvailableFilterProxyModel.cpp  AvailableFilterProxyModel.h  NameFilterProxyModel.cpp  NameFilterProxyModel.h  RequirementFilterProxyModel.cpp  RequirementFilterProxyModel.h  RequirementSourceModel.cpp  RequirementSourceModel.h  TrickSortProxyModel.cpp  TrickSortProxyModel.h  TrickSourceItem.cpp  TrickSourceItem.h  TrickSourceModel.cpp  TrickSourceModel.h  TrickSourceSortFilterProxyModel.cpp  TrickSourceSortFilterProxyModel.h
core/Source/Statistics/: AttributeSource.cpp  AttributeSource.h  DiseaseSource.cpp  DiseaseSource.h  FeatureSource.cpp  FeatureSource.h  OriginSource.cpp  OriginSource.h  OtherSkillSource.cpp  OtherSkillSource.h  ProfessionSource.cpp  ProfessionSource.h  QuestionSource.cpp  QuestionSource.h  SkillSource.cpp  SkillSource.h  SkillpackSource.cpp  SkillpackSource.h  SpecializationSource.cpp  SpecializationSource.h  StatisticsSource.cpp  StatisticsSource.h  SymptomSource.cpp  SymptomSource.h  TrickSource.cpp  TrickSource.h
core/Source/Statistics/Bonus/: AttributeBonusList.cpp  AttributeBonusList.h  AttributeBonusSingle.cpp  AttributeBonusSingle.h  AttributeBonusSource.h  BonusBeast.cpp  BonusBeast.h  BonusFame.cpp  BonusFame.h  BonusFeatures.cpp  BonusFeatures.h  BonusFriend.cpp  BonusFriend.h  BonusHealth.cpp  BonusHealth.h  BonusReputation.cpp  BonusReputation.h  BonusSkillpack.cpp  BonusSkillpack.h  BonusSkillpackDL.cpp  BonusSkillpackDL.h  BonusSkillpoints.cpp  BonusSkillpoints.h  BonusSkills.cpp  BonusSkills.h  BonusSource.h  BonusTrick.cpp  BonusTrick.h
core/Utils/: CMakeLists.txt  CardConverter.cpp  CardConverter.h  CardReader.cpp  CardReader.h  CardWriter.cpp  CardWriter.h  JsonLoader.cpp  JsonLoader.h
core/View/: CMakeLists.txt
core/View/Card/: Card.cpp  Card.h
core/View/Card/Common/: Modifier.cpp  Modifier.h
core/View/Card/Pages/: Page.h  Statistics.cpp  Statistics.h
core/View/Card/Statistics/: Attribute.cpp  Attribute.h  Disease.cpp  Disease.h  Experience.cpp  Experience.h  Feature.cpp  Feature.h  Origin.cpp  Origin.h  Otherskill.cpp  Otherskill.h  Place.cpp  Place.h  Profession.cpp  Profession.h  Reputation.cpp  Reputation.h  Requirement.cpp  Requirement.h  Skill.cpp  Skill.h  Skillpack.cpp  Skillpack.h  Specialization.cpp  Specialization.h  Symptom.cpp  Symptom.h  Trick.cpp  Trick.h  Wound.cpp  Wound.h  WoundsHandler.cpp  WoundsHandler.h
qmlUI/: CMakeLists.txt  icons.qrc  main.cpp  main.qml
qmlUI/Common/: FormPopup.qml  TooltipPopup.qml
qmlUI/Delegates/: RecentFileDelegate.qml
qmlUI/Delegates/Card/Beast/: CombatAction.qml  Command.qml  Condition.qml  Maneuver.qml
qmlUI/Delegates/Card/Equipment/: ArmorPart.qml  BackpackItem.qml  Resource.qml  Weapon.qml
qmlUI/Delegates/Card/Notes/: FormQuestion.qml
qmlUI/Delegates/Card/Statistics/: OtherSkill.qml  Symptom.qml  Trick.qml  Wound.qml
qmlUI/Delegates/Card/Statistics/AttributeLabel/: AttributeValueLabel.qml
qmlUI/Delegates/Card/Statistics/Modifiers/: ModifierCategory.qml
qmlUI/Delegates/Card/Statistics/OtherSkill/: OtherSkill.qml
qmlUI/Delegates/Creation/: AttributeDescription.qml  AttributeValue.qml  Feature.qml  SelectionButton.qml
qmlUI/Elements/Card/Beast/: AttributeRow.qml  Damage.qml  Data.qml  Stats.qml  StatsField.qml
qmlUI/Elements/Card/Common/: DataField.qml  HeaderLabel.qml  List.qml  Portrait.qml  ScrollTextArea.qml  TooltipContent.qml  ValueLabel.qml
qmlUI/Elements/Card/Equipment/: Armor.qml  Resources.qml  StatsSpecials.qml  StatsSpinBox.qml  StatsText.qml  StatsWeaponMelee.qml  StatsWeaponRanged.qml
qmlUI/Elements/Card/Statistics/: Attribute.qml  AttributeLabel.qml  DifficultyLevelValue.qml  DifficultyLevels.qml  DiseaseTooltip.qml  Experience.qml  Modifiers.qml  NSSkill.qml  NSSkillpack.qml  OtherSkills.qml  Personal.qml  PersonalField.qml  Portrait.qml  ReputationTooltip.qml  Skill.qml  Skillpack.qml  TrickTooltip.qml  Tricks.qml  Wounds.qml
qmlUI/Elements/Common/: IconButton.qml
qmlUI/Elements/Creation/Diseases/: Symptom.qml
qmlUI/Elements/Creation/Form/: Question.qml
qmlUI/Elements/Creation/Origin/: AttributeBonus.qml
qmlUI/Elements/Creation/Reputation/: Place.qml
qmlUI/Elements/Creation/Skills/: Attribute.qml  AttributeDiffcultyLevels.qml  DifficultyLevel.qml  OtherSkill.qml  Skill.qml  Skillpack.qml
qmlUI/Elements/Creation/Tricks/: Trick.qml  TrickContent.qml
qmlUI/Forms/: ExperienceForm.qml  OtherSkillForm.qml  WoundForm.qml
qmlUI/Pages/Card/: Beast.qml  Equipment.qml  Notes.qml  Statistics.qml
qmlUI/Pages/Creation/: Attributes.qml  Diseases.qml  Form.qml  Origin.qml  Profession.qml  Reputation.qml  Shop.qml  Skills.qml  Specialization.qml  Tricks.qml
qmlUI/Placeholders/: PagePlaceholder.qml
qmlUI/Views/: Card.qml  Cards.qml  Creation.qml  Pets.qml  Welcome.qml
